Website: Update and rebuild.
[SVN r83178]

--- a/users/history/version_1_33_1.html
+++ b/users/history/version_1_33_1.html
@@ -240,12 +240,12 @@
       test results</a>.
     </p>
     <p>
-      <em>New for this release</em>: Support for building
-      with the newest STLport-5.0 was added. The support includes building with MinGW
-      Runtime 3.8 plus STLport-5.0 improved to support wide character operations.
-      Apple GCC 4.0, HP Tru64 C++, and Microsoft Visual C++ 8.0 are supported platforms.
-      We have added an experimental autoconf-like <tt>configure</tt> script
-      for Unix-like systems: run <tt>configure --help</tt> for more information.
+      <em>New for this release</em>: Support for building with the newest
+      STLport-5.0 was added. The support includes building with MinGW Runtime 3.8
+      plus STLport-5.0 improved to support wide character operations. Apple GCC 4.0,
+      HP Tru64 C++, and Microsoft Visual C++ 8.0 are supported platforms. We have
+      added an experimental autoconf-like <tt>configure</tt> script for
+      Unix-like systems: run <tt>configure --help</tt> for more information.
     </p>
     <ul>
       <li>
