--- a/users/history/version_1_34_0.html
+++ b/users/history/version_1_34_0.html
@@ -279,8 +279,8 @@
             </li>
             <li>
               <div>
-                <em>Note:</em> the name of the compiled library
-                for the <a href="/doc/libs/1_34_0/libs/graph/doc/read_graphviz.html">GraphViz
+                <em>Note:</em> the name of the compiled library for the
+                <a href="/doc/libs/1_34_0/libs/graph/doc/read_graphviz.html">GraphViz
                 reader</a> has changed to <tt>boost_graph</tt> (from
                 <tt>bgl-viz</tt>) to match Boost conventions.
               </div>
