--- a/users/history/version_1_52_0.html
+++ b/users/history/version_1_52_0.html
@@ -326,10 +326,10 @@
             </li>
             <li>
               <div>
-                <em>ABI breaking:</em> Reimplemented <code><span class="identifier">message_queue</span></code> with a circular buffer
-                index (the old behavior used an ordered array, leading to excessive
-                copies). This should greatly increase performance but breaks ABI.
-                Old behaviour/ABI can be used undefining macro <code><span class="identifier">BOOST_INTERPROCESS_MSG_QUEUE_CIRCULAR_INDEX</span></code>
+                <em>ABI breaking:</em> Reimplemented <code><span class="identifier">message_queue</span></code>
+                with a circular buffer index (the old behavior used an ordered array,
+                leading to excessive copies). This should greatly increase performance
+                but breaks ABI. Old behaviour/ABI can be used undefining macro <code><span class="identifier">BOOST_INTERPROCESS_MSG_QUEUE_CIRCULAR_INDEX</span></code>
                 in <code><span class="identifier">boost</span><span class="special">/</span><span class="identifier">interprocess</span><span class="special">/</span><span class="identifier">detail</span><span class="special">/</span><span class="identifier">workaround</span><span class="special">.</span><span class="identifier">hpp</span></code>
               </div>
             </li>
@@ -641,14 +641,13 @@
           <ul>
             <li>
               <div>
-                <em>Deprecated Features</em>: Deprecated
-                features since boost 1.50 available only until boost 1.55. These
-                deprecated features will be provided by default up to boost 1.52.
-                If you don't want to include the deprecated features you could define
-                BOOST_THREAD_DONT_PROVIDE_DEPRECATED_FEATURES_SINCE_V3_0_0. Since
-                1.53 these features will not be included any more by default. Since
-                this version, if you want to include the deprecated features yet
-                you could define BOOST_THREAD_PROVIDE_DEPRECATED_FEATURES_SINCE_V3_0_0.
+                <em>Deprecated Features</em>: Deprecated features since
+                boost 1.50 available only until boost 1.55. These deprecated features
+                will be provided by default up to boost 1.52. If you don't want to
+                include the deprecated features you could define BOOST_THREAD_DONT_PROVIDE_DEPRECATED_FEATURES_SINCE_V3_0_0.
+                Since 1.53 these features will not be included any more by default.
+                Since this version, if you want to include the deprecated features
+                yet you could define BOOST_THREAD_PROVIDE_DEPRECATED_FEATURES_SINCE_V3_0_0.
                 These deprecated features will be only available until boost 1.55,
                 that is you have yet 1 year to move to the new features.
                 <ul>
