--- a/users/history/version_1_53_0.html
+++ b/users/history/version_1_53_0.html
@@ -514,8 +514,8 @@
             </li>
             <li>
               <div>
-                <em>ABI breaking</em>: changed node pool
-                allocators internals for improved efficiency.
+                <em>ABI breaking</em>: changed node pool allocators internals
+                for improved efficiency.
               </div>
             </li>
             <li>
