--- a/users/history/version_1_38_0.html
+++ b/users/history/version_1_38_0.html
@@ -469,10 +469,10 @@
           <ul>
             <li>
               <div>
-                <em>Breaking change</em>: empty expressions,
-                and empty alternatives are now allowed when using the Perl regular
-                expression syntax. This change has been added for Perl compatibility,
-                when the new <code><span class="identifier">syntax_option_type</span></code>
+                <em>Breaking change</em>: empty expressions, and empty
+                alternatives are now allowed when using the Perl regular expression
+                syntax. This change has been added for Perl compatibility, when the
+                new <code><span class="identifier">syntax_option_type</span></code>
                 <em>no_empty_expressions</em> is set then the old behaviour
                 is preserved and empty expressions are prohibited. This is issue
                 <a href="https://svn.boost.org/trac/boost/ticket/1081">#1081</a>.
