--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -73,6 +73,24 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/algorithm/">Algorithm</a>:</span>
+          <ul>
+            <li>
+              <div>
+                The return types for copy_while and copy_until have been changed.
+                This is an interface change. If you were using the return values
+                from these functions, then you will have to modify your code. Instead
+                of just returning the modified <code><span class="identifier">OutputIterator</span></code>,
+                these functions now return a <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">pair</span><span class="special">&lt;</span><span class="identifier">InputIterator</span><span class="special">,</span> <span class="identifier">OutputIterator</span><span class="special">&gt;</span></code>. If this change affects your
+                code, the simplest change is to add a <code><span class="special">.</span><span class="identifier">second</span></code> to the end of the call,
+                which will get you the same behavior that you had before.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/coroutine/">Coroutine</a>:</span>
           <ul>
             <li>
