Type Erasure added to trunk.
[SVN r83432]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -495,7 +495,7 @@ http://www.boost.org/development/website_updating.html
 			Pending</a></del><br/>
 		    <a href=
                     "http://lists.boost.org/boost-announce/2012/08/0364.php">
-			Accepted</a></td>
+			Accepted -- Added to SVN</a></td>
                   </tr>
 
                   <tr>
