--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -348,6 +348,20 @@ http://www.boost.org/development/website_updating.html
                   </tr>
                 </thead>
 
+                  <tr>
+                    <td>Review Wizard Status Report</td>
+
+                    <td></td>
+
+                    <td>Ronald Garcia</td>
+
+                    <td>March 14, 2012</td>
+
+                    <td><a href=
+                    "http://lists.boost.org/boost-announce/2013/03/0378.php">
+			Report</a></td>
+                  </tr>
+
 		  <tr>
                     <td>Boost 1.53.0 Released</td>
 
