Fix link to MinMax. Fixes #8329.
[SVN r83679]

--- a/users/history/version_1_53_0.html
+++ b/users/history/version_1_53_0.html
@@ -668,7 +668,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/minmax/">MinMax</a>:</span>
+          <span class="library"><a href="/libs/algorithm/minmax/">MinMax</a>:</span>
           <ul>
             <li>
               <div>
