--- a/development/website_updating.html
+++ b/development/website_updating.html
@@ -138,8 +138,8 @@ tidy --tidy-mark no -i -wrap 78 -m -asxhtml --merge-divs no --merge-spans no --d
 
                   <tr>
                     <td colspan="3">This is the experimetal version of the
-                    website. Development work should be done here first and then
-                    merged to the live website.</td>
+                    website. Development work should be done here first and
+                    then merged to the live website.</td>
                   </tr>
 
                   <tr>
@@ -324,10 +324,10 @@ tidy --tidy-mark no -i -wrap 78 -m -asxhtml --merge-divs no --merge-spans no --d
                 <li>Create a new file in the <tt>/feed/news</tt> directory,
                 say <tt>/feed/news/gui_review_ends.qbk</tt>.</li>
 
-                <li>In a shell, run the <tt>/site-tools/update.py</tt> script.
-                This will generate the page for the new news item, regenerate
-                the <tt>/feed/news.rss</tt> file to include it, update pages
-                which link to the new item and update the file
+                <li>In a shell, run the <tt>/site-tools/update.py</tt>
+                script. This will generate the page for the new news item,
+                regenerate the <tt>/feed/news.rss</tt> file to include it,
+                update pages which link to the new item and update the file
                 <tt>/site-tools/state/feed-pages.txt</tt> which tracks the
                 current state of generated files.</li>
 
