Add note about setting up local server on Ubuntu.
[SVN r83696]

--- a/development/website_updating.html
+++ b/development/website_updating.html
@@ -396,6 +396,22 @@ define('UNZIP', 'unzip');
                   <tt>common/code/boost_config.php</tt> file.</p>
                 </li>
               </ol>
+
+              <h3>Ubuntu setup</h3>
+
+              <p>To setup the site on Ubuntu, I needed to do:</p>
+              <pre>
+sudo apt-get install apache2 libapache2-mod-php5
+sudo a2enmod headers
+sudo a2enmod rewrite
+sudo a2enmod include
+sudo a2dismod deflate
+sudo service apache2 restart
+              
+</pre>
+
+              <p>I had to disable <code>deflate</code> because it interacts
+              badly with php's <code>virtual</code> function.</p>
             </div>
           </div>
         </div>
