Link to the documentation inspect reports.
Not as good as running inspect on a nightly build, so I left the old links
commented out, so they can be restored at a later date, if appropriate.


[SVN r83697]

--- a/development/testing.html
+++ b/development/testing.html
@@ -134,20 +134,34 @@ http://www.boost.org/development/website_updating.html
               problems such as missing copyrights or licenses. The Boost
               Inspection Report tells all!</p>
 
+              <p><strong>Note:</strong> Since we're not currently creating
+              nightly builds, the normal inspection reports aren't being
+              generated. So, instead inspect is being run as part of the
+              documentation build. This isn't quite the same as a nightly
+              build, and isn't as regular. But it's pretty close.</p>
+
               <table summary="Regression Results">
                 <tr>
                   <th>Version</th>
                 </tr>
 
                 <tr>
-                  <td><a href=
+                  <!-- <td><a href=
                   "http://boost.cowic.de/rc/inspect-trunk.html">Main
+                  trunk</a></td> -->
+
+                  <td><a href=
+                  "http://boost.cowic.de/rc/docs-inspect-trunk.html">Main
                   trunk</a></td>
                 </tr>
 
                 <tr>
-                  <td><a href=
+                  <!-- <td><a href=
                   "http://boost.cowic.de/rc/inspect-snapshot.html">Release
+                  branch</a></td> -->
+
+                  <td><a href=
+                  "http://boost.cowic.de/rc/docs-inspect-release.html">Release
                   branch</a></td>
                 </tr>
               </table>
