--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -579,9 +579,13 @@ http://www.boost.org/development/website_updating.html
 
                     <td>February 20, 2012 - February 29, 2012</td>
 
-                    <td><a href=
+                    <td><del><a href=
                     "http://lists.boost.org/boost-announce/2012/02/0349.php">
-			Pending</a></td>
+			Pending</a></del><br/>
+		      <a href=
+                    "http://lists.boost.org/boost-announce/2013/04/0379.php">
+			Accepted</a>
+		    </td>
                   </tr>
 
                   <tr>
