Boost.Log accepted and added Boost.GIL IO extensions added.
[SVN r84073]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -1039,7 +1039,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td><a href=
 		    "http://lists.boost.org/boost-announce/2011/01/0281.php">
-		    Accepted</a></td>
+		    Accepted -- Added to SVN</a></td>
                   </tr>
 
                   <tr>
@@ -1163,9 +1163,10 @@ http://www.boost.org/development/website_updating.html
 
                     <td>March 8, 2010 - March 17, 2010</td>
 
-                    <td><a href=
+                    <td><del><a href=
                     "http://lists.boost.org/boost-announce/2010/03/0256.php">
-		    Accepted Provisionally</a></td>
+		    Accepted Provisionally</a></<del><br/>
+		    Accepted -- Added to SVN</td>
                   </tr>
 
                   <tr>
