--- a/community/irc.html
+++ b/community/irc.html
@@ -63,7 +63,7 @@ http://www.boost.org/development/website_updating.html
 
               <h2>#boost-soc</h2>
 
-              <p>When in session studens and mentors participating in the
+              <p>When in session students and mentors participating in the
               Google Summer of Code program take their discussions here.</p>
 
               <ul class="menu">
