Move bugs.html into development section.
[SVN r84365]

--- a/common/menu-development.html
+++ b/common/menu-development.html
@@ -7,7 +7,7 @@
       "link">&gt;</span></a>
     </li>
 
-    <li><a href="/support/bugs.html" class="internal">Reporting and Fixing
+    <li><a href="/development/bugs.html" class="internal">Reporting and Fixing
     Bugs<span class="link">&gt;</span></a></li>
 
     <li>
