--- a/development/bugs.html
+++ b/development/bugs.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href=
-  "../style-v2/section-support.css" />
+  "/style-v2/section-development.css" />
   <!--[if IE 7]> <style type="text/css"> body { behavior: url(/style-v2/csshover3.htc); } </style> <![endif]-->
 </head><!--
 Note: Editing website content is documented at:
@@ -145,7 +145,7 @@ http://www.boost.org/development/website_updating.html
 
       <div id="sidebar">
         <!--#include virtual="/common/sidebar-common.html" -->
-        <!--#include virtual="/common/sidebar-support.html" -->
+        <!--#include virtual="/common/sidebar-development.html" -->
       </div>
 
       <div class="clear"></div>
