--- a/users/faq.html
+++ b/users/faq.html
@@ -249,7 +249,7 @@ http://www.boost.org/development/website_updating.html
 
               <p class="faq"><span class="faq-question">What should I do if I
               spot a bug in the Boost code or documentation?</span> See the
-              suggestions on the <a href="/support/bugs.html">Bugs
+              suggestions on the <a href="/development/bugs.html">Bugs
               page</a>.</p>
 
               <p class="faq"><span class="faq-question">How can I request a
