Add new libraries to the release notes.
[SVN r84431]

--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -51,7 +51,23 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          <span class="library"><a href="/libs/log/">Log</a>:</span>
+  Logging library, from Andrey
+          Semashev.
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/tti/">TTI</a>:</span>
+  Type Traits Introspection library,
+          from Edward Diener.
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/type_erasure/">Type Erasure</a>:</span>
+  Runtime polymorphism
+          based on concepts.
         </div>
       </li>
     </ul>
