Various release notes.
[SVN r84451]

--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -90,6 +90,23 @@
                 which will get you the same behavior that you had before.
               </div>
             </li>
+            <li>
+              <div>
+                Added C++14 versions of 'is_permutation', 'equal' and 'mismatch'.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/circular_buffer">Circular Buffer</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed warnings (<a href="https://svn.boost.org/trac/boost/ticket/8032">#8032</a>).
+              </div>
+            </li>
           </ul>
         </div>
       </li>
@@ -116,7 +133,21 @@
             </li>
             <li>
               <div>
-                fixes for #7805, #7899, #7972, #8023, #8024, #8101
+                Fixes for <a href="https://svn.boost.org/trac/boost/ticket/7805">#7805</a>, <a href="https://svn.boost.org/trac/boost/ticket/7899">#7899</a>, <a href="https://svn.boost.org/trac/boost/ticket/7972">#7972</a>, <a href="https://svn.boost.org/trac/boost/ticket/8023">#8023</a>, <a href="https://svn.boost.org/trac/boost/ticket/8024">#8024</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/8101">#8101</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/utility/">Utility</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fix <code><span class="identifier">basic_string_ref</span><span class="special">::</span><span class="identifier">find</span></code>
+                (<a href="https://svn.boost.org/trac/boost/ticket/8067">#8067</a>).
               </div>
             </li>
           </ul>
