More release notes.
[SVN r84452]

--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -100,6 +100,51 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/chrono/">Chrono</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <em>Fixed Bugs:</em>
+                <ul>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8079">#8079</a>
+                      Chrono memory leak
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8318">#8318</a>
+                      BOOST_FORCEINLINE constructors of time_point and duration
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8367">#8367</a>
+                      chrono does not compile with clang from XCode 4.5.2 with -std=c++11
+                      -stdlib=libc++ and -arch armv7
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8370">#8370</a>
+                      typo in chrono reference
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8435">#8435</a>
+                      Can't compile Chrono on HP-UX due to no CLOCK_REALTIME macro.
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/circular_buffer">Circular Buffer</a>:</span>
           <ul>
             <li>
@@ -142,12 +187,205 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/thread/">Thread</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <em>New Features:</em>
+                <ul>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/7285">#7285</a>
+                      C++11 compliance: Allow to pass movable arguments for call_once.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/7445">#7445</a>
+                      Async: Add future&lt;&gt;.then
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/7449">#7449</a>
+                      Synchro: Add a synchronized value class
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>Fixed Bugs:</em>
+                <ul>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/4878">#4878</a>
+                      MinGW 4.5.0 undefined reference to bool interruptible_wait(detail::win32::handle
+                      handle_to_wait_for,detail::t imeout target_time).
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/4882">#4882</a>
+                      Win32 shared_mutex does not handle timeouts correctly.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/5752">#5752</a>
+                      boost::call_once() is unreliable on some platforms
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6652">#6652</a>
+                      Boost.Thread shared_mutex.hpp:50:99: warning: dereferencing
+                      type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing]
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6843">#6843</a>
+                      [Intel C++] Compile Errors with '#include &lt;atomic&gt;'
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6966">#6966</a>
+                      future boost::future_category inconsistent dll linkage
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/7720">#7720</a>
+                      exception lock_error while intensive locking/unlocking of mutex
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/7755">#7755</a>
+                      Thread: deadlock with shared_mutex on Windows
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/7980">#7980</a>
+                      Build error: msvc-11.0 and BOOST_THREAD_DONT_USE_DATETIME
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/7982">#7982</a>
+                      pthread_delay_np() parm compile error on AIX
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8027">#8027</a>
+                      thread library fails to compile with Visual Studio 2003
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8070">#8070</a>
+                      prefer GetTickCount64 over GetTickCount
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8136">#8136</a>
+                      boost::this_thread::sleep_for() sleeps longer than it should
+                      in Windows
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8212">#8212</a>
+                      Boost thread compilation error on Solaris 10
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8237">#8237</a>
+                      fix documentation for 'thread_group'
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8239">#8239</a>
+                      barrier::wait() not marked as interruption_point
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8323">#8323</a>
+                      boost::thread::try_join_for/try_join_until may block indefinitely
+                      due to a combination of problems in Boost.Thread and Boost.Chrono
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8337">#8337</a>
+                      The internal representation of &quot;std::string(this-&gt;code()-&gt;message())&quot;
+                      escapes, but is destroyed when it exits scope.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8371">#8371</a>
+                      C++11 once_flag enabled when constexpr is not available
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8443">#8443</a>
+                      Header file inclusion order may cause crashes
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8451">#8451</a>
+                      Missing documented function 'boost::scoped_thread::joinable'
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/8451">#8530</a>
+                      [Coverity] Unused variable thread_handle, uninitialized variable
+                      cond_mutex in thread/pthread/thread_data.hpp
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/utility/">Utility</a>:</span>
           <ul>
             <li>
               <div>
                 Fix <code><span class="identifier">basic_string_ref</span><span class="special">::</span><span class="identifier">find</span></code>
                 (<a href="https://svn.boost.org/trac/boost/ticket/8067">#8067</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Update noncopyable for C++11 (<a href="https://svn.boost.org/trac/boost/ticket/6578">#6578</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Fix noncopyable compiler warning when used in DLL interface (<a href="https://svn.boost.org/trac/boost/ticket/6935">#6935</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Fix using <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">addressof</span></code> with <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">function</span></code>
+                on SolarisStudio compiler (<a href="https://svn.boost.org/trac/boost/ticket/7079">#7079</a>).
               </div>
             </li>
           </ul>
