More release notes.
[SVN r84457]

--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -100,6 +100,31 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/any/">Any</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Added C++11 features support <a href="https://svn.boost.org/trac/boost/ticket/6999">#6999</a>:
+                <ul>
+                  <li>
+                    <div>
+                      Move assignment and move constructors.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Added <code><span class="identifier">noexcept</span></code>
+                      modifiers.
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/chrono/">Chrono</a>:</span>
           <ul>
             <li>
@@ -178,8 +203,87 @@
             </li>
             <li>
               <div>
-                Fixes for <a href="https://svn.boost.org/trac/boost/ticket/7805">#7805</a>, <a href="https://svn.boost.org/trac/boost/ticket/7899">#7899</a>, <a href="https://svn.boost.org/trac/boost/ticket/7972">#7972</a>, <a href="https://svn.boost.org/trac/boost/ticket/8023">#8023</a>, <a href="https://svn.boost.org/trac/boost/ticket/8024">#8024</a>,
-                <a href="https://svn.boost.org/trac/boost/ticket/8101">#8101</a>
+                <a href="http://svn.boost.org/trac/boost/ticket/7805">#7805</a>
+                Typo
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/7972">#7972</a>
+                GCC warnings
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/7988">#7988</a>
+                C++11 range-for
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/8023">#8023</a>
+                Using iterator traits
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/8024">#8024</a>
+                Create const_iterator
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/8101">#8101</a>
+                Postfix operator++ for iterator
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/8526">#8526</a>
+                memory leak
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/8544">#8544</a>
+                calling managed DLL
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/conversion/lexical_cast.htm">Lexical cast</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Converting to character pointer now triggers compile time assert
+                instead of runtime <a href="https://svn.boost.org/trac/boost/ticket/8334">#8334</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Lexical cast is now capable of converting <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">int128_type</span></code>
+                and <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">uint128_type</span></code> <a href="https://svn.boost.org/trac/boost/ticket/7909">#7909</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Changed internal stream buffer handling, now works with libc++ <a href="https://svn.boost.org/trac/boost/ticket/8267">#8267</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/7704">#7704</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Restored getting address of <code><span class="identifier">lexical_cast</span></code>
+                function that was broken in 1.53.0 <a href="https://svn.boost.org/trac/boost/ticket/7421">#7421</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed warnings, internals and tests <a href="https://svn.boost.org/trac/boost/ticket/2558">#2558</a>, <a href="https://svn.boost.org/trac/boost/ticket/7949">#7949</a>, <a href="https://svn.boost.org/trac/boost/ticket/8162">#8162</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/8369">#8369</a>, <a href="https://svn.boost.org/trac/boost/ticket/8547">#8547</a>.
               </div>
             </li>
           </ul>
@@ -364,6 +468,40 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/type_traits/">Type Traits</a>:</span>
+          <ul>
+            <li>
+              <div>
+                New type traits implemented <a href="https://svn.boost.org/trac/boost/ticket/8189">#8189</a>:
+                <ul>
+                  <li>
+                    <div>
+                      is_nothrow_move_constructible
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      is_nothrow_move_assignable
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      has_trivial_move_assign
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      has_trivial_move_constructor
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/utility/">Utility</a>:</span>
           <ul>
             <li>
@@ -386,6 +524,29 @@
               <div>
                 Fix using <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">addressof</span></code> with <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">function</span></code>
                 on SolarisStudio compiler (<a href="https://svn.boost.org/trac/boost/ticket/7079">#7079</a>).
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/variant/">Variant</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Now uses new type traits from Boost.TypeTrait to detect <code><span class="identifier">noexcept</span></code> constructors and assignment
+                operators <a href="https://svn.boost.org/trac/boost/ticket/8296">#8296</a>. This shall increase performance of <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">variant</span></code> for many types in C++11.
+              </div>
+            </li>
+            <li>
+              <div>
+                Multivisitation implemented <a href="https://svn.boost.org/trac/boost/ticket/8459">#8459</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Documentation updated to reflect C++11 features support.
               </div>
             </li>
           </ul>
